gcc/testsuite/rust/rustc/ui/issues/issue-36163.rs
const A: isize = Foo::B as isize;

enum Foo {
    B = A, // { dg-error ".E0391." "" { target *-*-* } }
}

fn main() {}

